# ecotoken

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
packaging/homebrew/: ecotoken.rb
src/: lib.rs  main.rs
src/calculator/: carbon.rs  energy.rs  mod.rs  water.rs
src/data/: mod.rs  model_energy.rs  provider_multipliers.rs
src/models/: equivalents.rs  impact.rs  mod.rs  token_record.rs
src/parsers/: claude_code.rs  codex.rs  copilot.rs  custom.rs  mod.rs
src/server/: mod.rs  routes.rs  static_files.rs
static/: app.js  index.html  style.css
tests/: calculator_tests.rs
