[package]
name = "ecotoken"
version = "0.1.1"
edition = "2021"
description = "Measure the environmental impact of your AI coding assistants."
license = "MIT"
readme = "README.md"
repository = "https://github.com/akhil-gautam/ecotoken"
homepage = "https://github.com/akhil-gautam/ecotoken"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
dirs = "6"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
open = "5"
walkdir = "2"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
